# capstone-image-recognition

./: README.md  download_dataset.py  image-captioning-vit-gpt2.ipynb  main.py  model.py  pyproject.toml
